--- a/application/flask_CPU/templates_cpu/ip_address.html
+++ b/application/flask_CPU/templates_cpu/ip_address.html
@@ -30,8 +30,7 @@
 <br>
 
 <div class="split">
-  <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data['latitude']}},{{Data['longitude']}}" width="100%"
-    height="500"></iframe>
+  <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data['latitude']}},{{Data['longitude']}}" width="100%" height="500"></iframe>
 </div>
 
 <div class="split2">
