--- a/application/flask_CPU/templates_cpu/measure.html
+++ b/application/flask_CPU/templates_cpu/measure.html
@@ -5,7 +5,7 @@
   function jumpPage() {
     location.href = "{{url_for('cpu.measure_view',graph_type=graph_type)}}";
   }
-  setTimeout("jumpPage()", 3000)
+  setTimeout("jumpPage()", 5000)
 </script>
 {% endblock %}
 
@@ -14,65 +14,59 @@
   {% for data in Data %}
   <h4>{{data}}</h4>
   {% endfor %}
-</div>
+</div><br>
 
-<div class="form-check form-check-inline">
-  {% if graph_type=="temp" %}
-  <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-  {% else %}
-  <input class="form-check-input" type="radio" id="inlineRadio0">
-  {% endif %}
-  <label class="form-check-label" for="inlineRadio0">
-    <a href="{{url_for('cpu.measure_view',graph_type='temp')}}" class="heading">temp</a>
-  </label>
-</div>
+{% if graph_type=="temp" %}
+<button class="btn btn-primary" onclick="location.href='/CPU/measure?graph_type=temp'">
+  <small>temperature</small>
+</button>
+{% else %}
+<button class="btn btn-secondary" onclick="location.href='/CPU/measure?graph_type=temp'">
+  <small>temperature</small>
+</button>
+{% endif %}
 
-<div class="form-check form-check-inline">
-  {% if graph_type=="clock" %}
-  <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-  {% else %}
-  <input class="form-check-input" type="radio" id="inlineRadio0">
-  {% endif %}
-  <label class="form-check-label" for="inlineRadio0">
-    <a href="{{url_for('cpu.measure_view',graph_type='clock')}}" class="heading">clock</a>
-  </label>
-</div>
+{% if graph_type=="clock" %}
+<button class="btn btn-primary" onclick="location.href='/CPU/measure?graph_type=clock'">
+  <small>clock</small>
+</button>
+{% else %}
+<button class="btn btn-secondary" onclick="location.href='/CPU/measure?graph_type=clock'">
+  <small>clock</small>
+</button>
+{% endif %}
 
-<div class="form-check form-check-inline">
-  {% if graph_type=="volt" %}
-  <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-  {% else %}
-  <input class="form-check-input" type="radio" id="inlineRadio0">
-  {% endif %}
-  <label class="form-check-label" for="inlineRadio0">
-    <a href="{{url_for('cpu.measure_view',graph_type='volt')}}" class="heading">volt</a>
-  </label>
-</div>
+{% if graph_type=="volt" %}
+<button class="btn btn-primary" onclick="location.href='/CPU/measure?graph_type=volt'">
+  <small>volt</small>
+</button>
+{% else %}
+<button class="btn btn-secondary" onclick="location.href='/CPU/measure?graph_type=volt'">
+  <small>volt</small>
+</button>
+{% endif %}
 
-<div class="form-check form-check-inline">
-  {% if graph_type=="arm" %}
-  <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-  {% else %}
-  <input class="form-check-input" type="radio" id="inlineRadio0">
-  {% endif %}
-  <label class="form-check-label" for="inlineRadio0">
-    <a href="{{url_for('cpu.measure_view',graph_type='arm')}}" class="heading">arm</a>
-  </label>
-</div>
+{% if graph_type=="arm" %}
+<button class="btn btn-primary" onclick="location.href='/CPU/measure?graph_type=arm'">
+  <small>arm</small>
+</button>
+{% else %}
+<button class="btn btn-secondary" onclick="location.href='/CPU/measure?graph_type=arm'">
+  <small>arm</small>
+</button>
+{% endif %}
 
-<div class="form-check form-check-inline">
-  {% if graph_type=="gpu" %}
-  <input class="form-check-input" type="radio" id="inlineRadio0" checked="checked">
-  {% else %}
-  <input class="form-check-input" type="radio" id="inlineRadio0">
-  {% endif %}
-  <label class="form-check-label" for="inlineRadio0">
-    <a href="{{url_for('cpu.measure_view',graph_type='gpu')}}" class="heading">gpu</a>
-  </label>
-</div>
+{% if graph_type=="gpu" %}
+<button class="btn btn-primary" onclick="location.href='/CPU/measure?graph_type=gpu'">
+  <small>gpu</small>
+</button>
+{% else %}
+<button class="btn btn-secondary" onclick="location.href='/CPU/measure?graph_type=gpu'">
+  <small>gpu</small>
+</button>
+{% endif %}
 
 <div>
   <img src="{{url_for('cpu.graph_view',graph_type=graph_type)}}" class="graph"></img>
 </div>
-
 {% endblock %}
