--- a/application/flask_arduino/templates_arduino/index_arduino.html
+++ b/application/flask_arduino/templates_arduino/index_arduino.html
@@ -3,7 +3,7 @@
 {% block BODY %}
 <br><br>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}">temp</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}">temperature</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.led_view',state='blink')}}">BLINK</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.led_view',state='rgb')}}">RGB</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.led_view',state='high')}}">HIGH</a>
