--- a/application/flask_arduino/templates_arduino/layout_arduino.html
+++ b/application/flask_arduino/templates_arduino/layout_arduino.html
@@ -41,7 +41,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">index</a>
-              <a class="dropdown-item" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}">temp</a>
+              <a class="dropdown-item" href="{{url_for('arduino.measure_temp_view',graph_type='temp')}}">temperature</a>
               <a class="dropdown-item" href="{{url_for('arduino.led_view',state='blink')}}">BLINK</a>
               <a class="dropdown-item" href="{{url_for('arduino.led_view',state='rgb')}}">RGB</a>
               <a class="dropdown-item" href="{{url_for('arduino.led_view',state='high')}}">HIGH</a>
