--- a/application/flask_arduino/templates_arduino/measure_temp.html
+++ b/application/flask_arduino/templates_arduino/measure_temp.html
@@ -11,24 +11,6 @@
 
 
 {% block BODY %}
-<style>
-  @media (min-width: 600px) {
-    #parent {
-      display: flex;
-    }
-
-    #child1 {
-      flex-grow: 1;
-      padding-top: 8%;
-      padding-left: 8%;
-    }
-
-    #child2 {
-      flex-grow: 1;
-    }
-  }
-</style>
-
 <div id="parent">
   <div id="child1">
     <h4>{{time}}</h4>
@@ -36,18 +18,28 @@
     <h4>humidity: {{humidity}}%</h4><br>
 
     {% if graph_type=="temp" %}
-    <button class="btn btn-primary" onclick="location.href='/arduino/measure_temp?graph_type=temp'">temperature</button>
+    <button class="btn btn-primary" onclick="location.href='/arduino/measure_temp?graph_type=temp'">
+      <small>temperature</small>
+    </button>
     {% else %}
-    <button class="btn btn-secondary" onclick="location.href='/arduino/measure_temp?graph_type=temp'">temperature</button>
+    <button class="btn btn-secondary" onclick="location.href='/arduino/measure_temp?graph_type=temp'">
+      <small>temperature</small>
+    </button>
     {% endif %}
 
     {% if graph_type=="humi" %}
-    <button class="btn btn-primary" onclick="location.href='/arduino/measure_temp?graph_type=humi'">humidity</button>
+    <button class="btn btn-primary" onclick="location.href='/arduino/measure_temp?graph_type=humi'">
+      <small>humidity</small>
+    </button>
     {% else %}
-    <button class="btn btn-secondary" onclick="location.href='/arduino/measure_temp?graph_type=humi'">humidity</button>
+    <button class="btn btn-secondary" onclick="location.href='/arduino/measure_temp?graph_type=humi'">
+      <small>humidity</small>
+    </button>
     {% endif %}
 
-    <button class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">reset</button>
+    <button class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+      <small>reset</small>
+    </button>
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -66,6 +58,7 @@
       </div>
     </div>
   </div>
+
   <div id="child2">
     <img src="{{url_for('arduino.graph_temp_view',graph_type=graph_type)}}" alt="graph" class="graph">
   </div>
