--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -32,12 +32,13 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
-            <img src="static_main/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+            <img src="../static_main/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
           </a>
         </li>
         <div class="collapse navbar-collapse" id="navbarNav">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" baria-haspopup="true" aria-expanded="false">MENU</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              baria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('Math.index_view')}}">Flask math</a>
@@ -76,7 +77,8 @@
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('Math.index_view')}}"><small>FlaskMath</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('cpu.index_view')}}"><small>FlaskCPU</small></a>
-        <a style="display: block;" class="heading" href="{{ url_for('arduino.index_view')}}"><small>FlaskArduino</small></a>
+        <a style="display: block;" class="heading"
+          href="{{ url_for('arduino.index_view')}}"><small>FlaskArduino</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('raspi.index_view')}}"><small>FlaskRaspi</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>FlaskGame</small></a>
       </ul>
