--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="static_main/images/RaspberryPi.png">
-  <link rel="apple-touch-icon" href="static_main/images/RaspberryPi.png">
+  <link rel="icon" type="image/x-icon" href="../static_main/images/RaspberryPi.png">
+  <link rel="apple-touch-icon" href="../static_main/images/RaspberryPi.png">
   <title>Flask RaspberryPi</title>
   <!-- bootstrapのインポート -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
   <!-- スタイルシート -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/mplus1p.css">
-  <link rel=stylesheet href="static_main/css/style.css">
+  <link rel=stylesheet href="../static_main/css/style.css">
   {% block SCRIPT %}
 
   {% endblock%}
@@ -77,8 +77,7 @@
         <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('Math.index_view')}}"><small>FlaskMath</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('cpu.index_view')}}"><small>FlaskCPU</small></a>
-        <a style="display: block;" class="heading"
-          href="{{ url_for('arduino.index_view')}}"><small>FlaskArduino</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('arduino.index_view')}}"><small>FlaskArduino</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('raspi.index_view')}}"><small>FlaskRaspi</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('game.index_view')}}"><small>FlaskGame</small></a>
       </ul>
@@ -90,8 +89,8 @@
           thisYear = date.getFullYear();
           document.getElementById("thisYear").innerHTML = thisYear;
         </script>
-        <a class="heading" href="https://github.com/kouki-0926/FlaskMathOnHeroku" target="_blank">
-          <img src="static_main/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
+        <a class="heading" href="https://github.com/kouki-0926" target="_blank">
+          <img src="../static_main/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
         </a>
       </div>
     </footer>
