--- a/application/main/templates_main/404_error.html
+++ b/application/main/templates_main/404_error.html
@@ -11,8 +11,7 @@
 
 {% block body %}
 <div class="center">
-  <h5>I'm sorry. The specified URL does not exist. Moves to the <a href="{{url_for('main.index_view')}}">Top
-      Page</a>after 5 seconds.</h5>
+  <h5>I'm sorry. The specified URL does not exist. Moves to the <a href="{{url_for('main.index_view')}}">TopPage</a>after 5 seconds.</h5>
   <img src="https://http.cat/404.jpg" alt="404" style="width:50%;max-width:50%;height:auto;">
 </div>
 {% endblock %}
