--- a/application/flask_CPU/templates_cpu/measure.html
+++ b/application/flask_CPU/templates_cpu/measure.html
@@ -11,7 +11,7 @@
 
 {% block BODY %}
 <div id="parent">
-  <div id="child1">
+  <div id="child1_measure">
     {% for data in Data %}
     <h4>{{data}}</h4>
     {% endfor %}
