--- a/application/flask_CPU/templates_cpu/ip_address.html
+++ b/application/flask_CPU/templates_cpu/ip_address.html
@@ -17,30 +17,29 @@
 {% block BODY %}
 
 {% if Data[0]!="ERROR" %}
-<p id="RealtimeClock" class="left"></p>
-<script src="static_cpu/js/RealTimeClock.js"></script>
-<br><br>
+<div id="parent">
+  <div id="child1">
+    <p id="RealtimeClock" class="left"></p>
+    <script src="static_cpu/js/RealTimeClock.js"></script>
+    <br><br>
 
-<h5>IPアドレス({{Data["version"]}})</h5>
-<h3 class="overflow">{{Data["ip"]}}</h3>
-<br>
-<h5>現在地</h5>
-{{Data["city"]}},{{Data["region"]}},{{Data["country"]}}
-<p>{{Data["latitude_2"]}}度 {{Data["longitude_2"]}}度　</p>
-<br>
+    <h5>IPアドレス({{Data["version"]}})</h5>
+    <h3 class="overflow">{{Data["ip"]}}</h3>
+    <br>
+    <h5>現在地</h5>
+    {{Data["city"]}},{{Data["region"]}},{{Data["country"]}}
+    <p>{{Data["latitude_2"]}}度 {{Data["longitude_2"]}}度</p>
+    <br>
 
-<div class="split">
-  <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data['latitude']}},{{Data['longitude']}}" width="100%" height="500"></iframe>
-</div>
-
-<div class="split2">
-  <br><br>
-  <h5>最寄り駅</h5>
-  {% for st_data in st_Data %}
-  <p><strong>{{st_data[1]}} {{st_data[0]}}</strong></p>
-  <p>距離:{{st_data[2]}}({{st_data[3]}})</p>
-  {% endfor %}
-  <br><br>
+    <h5>最寄り駅</h5>
+    {% for st_data in st_Data %}
+    <p><strong>{{st_data[1]}} {{st_data[0]}}</strong></p>
+    <p>距離:{{st_data[2]}}({{st_data[3]}})</p>
+    {% endfor %}
+  </div>
+  <div id="child2"><br>
+    <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data['latitude']}},{{Data['longitude']}}" width="100%" height="100%"></iframe>
+  </div>
 </div>
 
 {% else %}
