--- a/application/flask_game/templates_game/janken.html
+++ b/application/flask_game/templates_game/janken.html
@@ -1,41 +1,47 @@
 {% extends "layout_game.html" %}
 
 {% block BODY %}
+{% if type=="ml" %}
+<h2><a href="{{url_for('game.janken_view',type='ml')}}" class="heading">じゃんけん(機械学習版)</a></h2>
+{% else %}
 <h2><a href="{{url_for('game.janken_view')}}" class="heading">じゃんけん</a></h2>
+{% endif %}
 <br>
 
 <div class="center">
-    {% if n=='1' %}
-    <button class="btn btn-secondary" onclick="location.href='/game/janken?n=1'">
-        <img src="static_game/images/janken_gu.png" width="128" height="128" alt="グー">
-    </button>
-    {% else %}
-    <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=1'">
-        <img src="static_game/images/janken_gu.png" width="128" height="128" alt="グー">
-    </button>
-    {% endif %}
+  {% if n=='1' %}
+  <button class="btn btn-secondary" onclick="location.href='/game/janken?n=1&type={{type}}'">
+    <img src="static_game/images/janken_gu.png" class="janken_png" alt="グー">
+  </button>
+  {% else %}
+  <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=1&type={{type}}'">
+    <img src="static_game/images/janken_gu.png" class="janken_png" alt="グー">
+  </button>
+  {% endif %}
 
-    {% if n=='2' %}
-    <button class="btn btn-secondary" onclick="location.href='/game/janken?n=2'">
-        <img src="static_game/images/janken_choki.png" width="128" height="128" alt="チョキ">
-    </button>
-    {% else %}
-    <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=2'">
-        <img src="static_game/images/janken_choki.png" width="128" height="128" alt="チョキ">
-    </button>
-    {% endif %}
+  {% if n=='2' %}
+  <button class="btn btn-secondary" onclick="location.href='/game/janken?n=2&type={{type}}'">
+    <img src="static_game/images/janken_choki.png" class="janken_png" alt="チョキ">
+  </button>
+  {% else %}
+  <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=2&type={{type}}'">
+    <img src="static_game/images/janken_choki.png" class="janken_png" alt="チョキ">
+  </button>
+  {% endif %}
 
-    {% if n=='3' %}
-    <button class="btn btn-secondary" onclick="location.href='/game/janken?n=3'">
-        <img src="static_game/images/janken_pa.png" width="128" height="128" alt="パー">
-    </button>
-    {% else %}
-    <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=3'">
-        <img src="static_game/images/janken_pa.png" width="128" height="128" alt="パー">
-    </button>
-    {% endif %}
+  {% if n=='3' %}
+  <button class="btn btn-secondary" onclick="location.href='/game/janken?n=3&type={{type}}'">
+    <img src="static_game/images/janken_pa.png" class="janken_png" alt="パー">
+  </button>
+  {% else %}
+  <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=3&type={{type}}'">
+    <img src="static_game/images/janken_pa.png" class="janken_png" alt="パー">
+  </button>
+  {% endif %}
 
-    <br><br><br><br>
-    <h4>{% for anser in Anser%}{{anser}}{% endfor %}</h4>
+  <br><br><br><br>
+  {% for anser in Anser %}
+  <p>{{anser}}</p>
+  {% endfor %}
 </div>
 {% endblock %}
