--- a/application/flask_raspi/templates_raspi/layout_raspi.html
+++ b/application/flask_raspi/templates_raspi/layout_raspi.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="static_raspi/images/GitHub-Mark.png">
-  <link rel="apple-touch-icon" href="static_raspi/images/GitHub-Mark.png">
+  <link rel="icon" type="image/x-icon" href="static_raspi/images/RaspberryPi.png">
+  <link rel="apple-touch-icon" href="static_raspi/images/RaspberryPi.png">
   <title>Flask_raspi</title>
   <!-- bootstrapのインポート -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelraspiby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('raspi.index_view')}}">index</a>
               <a class="dropdown-item" href="{{ url_for('raspi.led_view',state='blink')}}">Blink</a>
