--- a/application/flask_CPU/templates_cpu/weather.html
+++ b/application/flask_CPU/templates_cpu/weather.html
@@ -17,7 +17,8 @@
       <option value="近畿">近畿</option>
       <option value="中国">中国</option>
       <option value="四国">四国</option>
-      <option value="九州・沖縄">九州・沖縄</option>
+      <option value="九州">九州</option>
+      <option value="沖縄">沖縄</option>
     </optgroup>
   </select>
 
@@ -25,7 +26,7 @@
     <option value="">先に地方を選択してください</option>
   </select>
 
-  <script src="static_cpu/js/select_pref.js"></script>
+  <script src="../static_cpu/js/select_pref.js"></script>
   <script>
     const selected_pref = document.getElementById("pref");
     selected_pref.onchange = function () {
