--- a/application/flask_CPU/templates_cpu/weather.html
+++ b/application/flask_CPU/templates_cpu/weather.html
@@ -26,7 +26,7 @@
     <option value="">先に地方を選択してください</option>
   </select>
 
-  <script src="../static_cpu/js/select_pref.js"></script>
+  <script src="static_cpu/js/select_pref.js"></script>
   <script>
     const selected_pref = document.getElementById("pref");
     selected_pref.onchange = function () {
