--- a/application/flask_arduino/templates_arduino/index_arduino.html
+++ b/application/flask_arduino/templates_arduino/index_arduino.html
@@ -8,6 +8,7 @@
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.led_view',state='rgb')}}">RGB</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.led_view',state='high')}}">HIGH</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.led_view',state='low')}}">LOW</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.init_view')}}">Init</a>
 </div><br><br>
 
 <nav aria-label="Page navigation">
