--- a/application/flask_game/templates_game/janken.html
+++ b/application/flask_game/templates_game/janken.html
@@ -9,37 +9,75 @@
 <br>
 
 <div class="center">
-  {% if n=='1' %}
-  <button class="btn btn-secondary" onclick="location.href='/game/janken?n=1&type={{type}}'">
-    <img src="static_game/images/janken_gu.png" class="janken_png" alt="グー">
-  </button>
-  {% else %}
-  <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=1&type={{type}}'">
-    <img src="static_game/images/janken_gu.png" class="janken_png" alt="グー">
-  </button>
-  {% endif %}
+  <div class="card-columns" style="columns: 2">
+    {% if nc==1 %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p><small>コンピュータ: グー</small></p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/comp_gu.png" class="janken_png" alt="グー">
+      </div>
+    </div>
+    {% elif nc==2 %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p><small>コンピュータ:チョキ</small></p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/comp_choki.png" class="janken_png" alt="チョキ">
+      </div>
+    </div>
+    {% elif nc==3 %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p><small>コンピュータ: パー</small></p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/comp_pa.png" class="janken_png" alt="パー">
+      </div>
+    </div>
+    {% else %}
+    {% endif %}
 
-  {% if n=='2' %}
-  <button class="btn btn-secondary" onclick="location.href='/game/janken?n=2&type={{type}}'">
-    <img src="static_game/images/janken_choki.png" class="janken_png" alt="チョキ">
-  </button>
-  {% else %}
-  <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=2&type={{type}}'">
-    <img src="static_game/images/janken_choki.png" class="janken_png" alt="チョキ">
-  </button>
-  {% endif %}
+    {% if n==1 %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p>あなた: グー</p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/janken_gu.png" class="janken_png" alt="グー">
+      </div>
+    </div>
+    {% elif n==2 %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p>あなた: チョキ</p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/janken_choki.png" class="janken_png" alt="チョキ">
+      </div>
+    </div>
+    {% elif n==3 %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p>あなた: パー</p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/janken_pa.png" class="janken_png" alt="パー">
+      </div>
+    </div>
+    {% else %}
+    {% endif %}
+  </div><br>
 
-  {% if n=='3' %}
-  <button class="btn btn-secondary" onclick="location.href='/game/janken?n=3&type={{type}}'">
-    <img src="static_game/images/janken_pa.png" class="janken_png" alt="パー">
-  </button>
-  {% else %}
-  <button class="btn btn-outline-dark" onclick="location.href='/game/janken?n=3&type={{type}}'">
-    <img src="static_game/images/janken_pa.png" class="janken_png" alt="パー">
-  </button>
-  {% endif %}
+  <div>
+    <button class="btn btn-dark" onclick="location.href='/game/janken?n=1&type={{type}}'">グー</button>
+    <button class="btn btn-dark" onclick="location.href='/game/janken?n=2&type={{type}}'">チョキ</button>
+    <button class="btn btn-dark" onclick="location.href='/game/janken?n=3&type={{type}}'">パー</button>
+  </div>
 
-  <br><br><br><br>
+  <br><br>
   {% for anser in Anser %}
   <p>{{anser}}</p>
   {% endfor %}
