--- a/application/flask_game/templates_game/janken.html
+++ b/application/flask_game/templates_game/janken.html
@@ -72,9 +72,10 @@
   </div><br>
 
   <div>
-    <button class="btn btn-dark" onclick="location.href='/game/janken?n=1&type={{type}}'">グー</button>
-    <button class="btn btn-dark" onclick="location.href='/game/janken?n=2&type={{type}}'">チョキ</button>
-    <button class="btn btn-dark" onclick="location.href='/game/janken?n=3&type={{type}}'">パー</button>
+    <button class="btn btn-outline-primary" onclick="location.href='/game/janken?n=1&type={{type}}'">グー</button>
+    <button class="btn btn-outline-primary" onclick="location.href='/game/janken?n=2&type={{type}}'">チョキ</button>
+    <button class="btn btn-outline-primary" onclick="location.href='/game/janken?n=3&type={{type}}'">パー</button>
+    <button class="btn btn-danger" onclick="location.href='/game/janken?n=reset&type={{type}}'">初期化</button>
   </div>
 
   <br><br>
