--- a/application/flask_game/templates_game/index_game.html
+++ b/application/flask_game/templates_game/index_game.html
@@ -3,7 +3,7 @@
 {% block BODY %}
 <br><br>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('game.janken_view')}}">じゃんけん</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('game.janken_view',type='rm')}}">じゃんけん</a>
   <a class="list-group-item list-group-item-action" href="{{ url_for('game.janken_view',type='ml')}}">じゃんけん(機械学習版)</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('game.box_view')}}">箱</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('game.bike_view')}}">bike</a>
