--- a/application/flask_game/templates_game/janken.html
+++ b/application/flask_game/templates_game/janken.html
@@ -38,6 +38,14 @@
       </div>
     </div>
     {% else %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p><small>コンピュータ:</small></p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/comp_gu.png" class="janken_png" alt="グー">
+      </div>
+    </div>
     {% endif %}
 
     {% if n==1 %}
@@ -68,6 +76,14 @@
       </div>
     </div>
     {% else %}
+    <div class="card border-dark">
+      <div class="card-header">
+        <p>あなた:</p>
+      </div>
+      <div class="card-body">
+        <img src="static_game/images/janken_gu.png" class="janken_png" alt="グー">
+      </div>
+    </div>
     {% endif %}
   </div><br>
 
