--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -8,7 +8,7 @@
       <b><a href='{{url_for("Math.index_view")}}' class="heading">Flask Math</a></b>
     </div>
     <a href='{{url_for("Math.index_view")}}'>
-      <img src="../static_main/images/tenkey.png" alt="Math" width="150" height="100">
+      <img src="../static_main/images/tenkey.png" alt="Math" class="img_index">
     </a>
     <div class="card-body text-success">
       <p class="card-text">Flask Math is a web site that can perform various calculations such as calculus and matrix.
@@ -21,7 +21,7 @@
       <b><a href='{{url_for("cpu.index_view")}}' class="heading">Flask CPU</a></b>
     </div>
     <a href='{{url_for("cpu.index_view")}}'>
-      <img src="../static_main/images/CPU.png" alt="CPU" width="150" height="100">
+      <img src="../static_main/images/CPU.png" alt="CPU" class="img_index">
     </a>
     <div class="card-body text-success">
       <p class="card-text">Flask CPU is a web site where you can get various values of CPU.</p>
@@ -33,7 +33,7 @@
       <b><a href='{{url_for("arduino.index_view")}}' class="heading">Flask Arduino</a></b>
     </div>
     <a href='{{url_for("arduino.index_view")}}'>
-      <img src="../static_main/images/arduino-icon.png" alt="Arduino" width="150" height="100">
+      <img src="../static_main/images/arduino-icon.png" alt="Arduino" class="img_index">
     </a>
     <div class="card-body text-success">
       <p class="card-text">Flask Arduino is a web site where you can get various values from Arduino.</p>
@@ -45,7 +45,7 @@
       <b><a href='{{url_for("raspi.index_view")}}' class="heading">Flask raspi</a></b>
     </div>
     <a href='{{url_for("raspi.index_view")}}'>
-      <img src="../static_main/images/RaspberryPi.png" alt="raspberryPi" width="150" height="100">
+      <img src="../static_main/images/RaspberryPi.png" alt="raspberryPi" class="img_index">
     </a>
     <div class="card-body text-success">
       <p class="card-text">Flask raspberryPi</p>
@@ -57,7 +57,7 @@
       <b><a href='{{url_for("game.index_view")}}' class="heading">Flask Game</a></b>
     </div>
     <a href='{{url_for("game.index_view")}}'>
-      <img src="../static_main/images/game.png" alt="Game" width="150" height="100">
+      <img src="../static_main/images/game.png" alt="Game" class="img_index">
     </a>
     <div class="card-body text-success">
       <h2 class="card-text" style="color:yellow;background-color: black;">Flask Game is in development</h2>
