--- a/application/flask_math/templates_math/prime_factorization.html
+++ b/application/flask_math/templates_math/prime_factorization.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h2><a href="{{url_for('Math.newton_method_view')}}" class="heading">ニュートン法</a></h2>
+<h2><a href="{{url_for('Math.prime_factorization_view')}}" class="heading">素因数分解</a></h2>
 <br>
-<form action='{{url_for("Math.newton_method_view")}}' method="post">
+<form action='{{url_for("Math.prime_factorization_view")}}' method="post">
   <div class="form-group">
-    <label for="InputNumber">正の数を入力してください</label>
-    <input type="text" name="number" class="form-control" id="InputNumber" value="{{number}}" placeholder="positive number">
+    <label for="InputNumber">整数を入力してください</label>
+    <input type="text" name="number" class="form-control" id="InputNumber" value="{{number}}" placeholder="natural number">
   </div><br>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br><br>
@@ -21,7 +21,7 @@
   </h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
-  <script src="static/js/copy.js"></script>
+  <script src="static_math/js/copy.js"></script>
 </div>
 {% endif %}
 
