--- a/application/flask_math/templates_math/Apart.html
+++ b/application/flask_math/templates_math/Apart.html
@@ -1,15 +1,18 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h2><a href="{{url_for('Math.prime_factorization_view')}}" class="heading">素因数分解</a></h2>
+<h2><a href="{{url_for('Math.Apart_view')}}" class="heading">部分分数分解</a></h2>
 <br>
-<form action='{{url_for("Math.prime_factorization_view")}}' method="post">
+
+<form action='{{url_for("Math.Apart_view")}}' method="post" enctype="multipart/form-data">
   <div class="form-group">
-    <label for="InputNumber">整数を入力してください</label>
-    <input type="text" name="number" class="form-control" id="InputNumber" value="{{number}}" placeholder="natural number">
+    <label for="InputFormula">式を入力してください</label>
+    <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="formula">
   </div><br>
+
   <button type="submit" class="btn btn-primary btn-block">計算</button>
-</form><br><br>
+</form><br>
+
 
 {% if init_flag==0 %}
 <div class="center">
@@ -21,7 +24,7 @@
   </h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
-  <script src="static/js/copy.js"></script>
+  <script src="static_math/js/copy.js"></script>
 </div>
 {% endif %}
 
