--- a/application/flask_math/templates_math/Factorial.html
+++ b/application/flask_math/templates_math/Factorial.html
@@ -1,17 +1,18 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h2><a href="{{url_for('Math.Expand_view')}}" class="heading">展開</a></h2>
+<h2><a href="{{url_for('Math.Factorial_view')}}" class="heading">階乗</a></h2>
 <br>
 
-<form action='{{url_for("Math.Expand_view")}}' method="post" enctype="multipart/form-data">
+<form action='{{url_for("Math.Factorial_view")}}' method="post" enctype="multipart/form-data">
   <div class="form-group">
-    <label for="InputFormula">式を入力してください</label>
-    <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="formula">
+    <label for="InputFormula">自然数を入力してください</label>
+    <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="natural number">
   </div><br>
   
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
+
 
 {% if init_flag==0 %}
 <h4 class="latex">\[{{anser}}\]</h4>
@@ -22,7 +23,7 @@
   <h5 class="latex" id="targetID"><pre>{{anser}}</pre></h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
-  <script src="static/js/copy.js"></script>
+  <script src="static_math/js/copy.js"></script>
 </div>
 {% endif %}
 
