--- a/application/flask_math/templates_math/Sieve_of_Eratosthenes.html
+++ b/application/flask_math/templates_math/Sieve_of_Eratosthenes.html
@@ -1,17 +1,12 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h2><a href="{{url_for('Math.max_min_view')}}" class="heading">極大値極小値</a></h2>
+<h2><a href="{{url_for('Math.Sieve_of_Eratosthenes_view')}}" class="heading">ソクラテスのふるい</a></h2>
 <br>
-<form action='{{url_for("Math.max_min_view")}}' method="post">
+<form action='{{url_for("Math.Sieve_of_Eratosthenes_view")}}' method="post">
   <div class="form-group">
-    <label for="InputFormula">関数を入力してください</label><br>
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text">f(x,y)=</span>
-      </div>
-      <input type="text" name="formula" value="{{formula}}" placeholder="function" class="form-control">
-    </div>
+    <label for="InputNumber">2以上の自然数を入力してください</label>
+    <input type="text" name="number" class="form-control" id="InputNumber" value="{{number}}" placeholder="natural number">
   </div><br>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br><br>
@@ -30,7 +25,7 @@
   </h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
-  <script src="static/js/copy.js"></script>
+  <script src="static_math/js/copy.js"></script>
 </div>
 {% endif %}
 
