--- a/application/flask_math/templates_math/equations.html
+++ b/application/flask_math/templates_math/equations.html
@@ -98,7 +98,7 @@
   </h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
-  <script src="static/js/copy.js"></script>
+  <script src="static_math/js/copy.js"></script>
 </div>
 {% endif %}
 
