--- a/application/flask_math/templates_math/factorization.html
+++ b/application/flask_math/templates_math/factorization.html
@@ -1,18 +1,15 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h2><a href="{{url_for('Math.Apart_view')}}" class="heading">部分分数分解</a></h2>
+<h2><a href="{{url_for('Math.factorization_view')}}" class="heading">因数分解</a></h2>
 <br>
-
-<form action='{{url_for("Math.Apart_view")}}' method="post" enctype="multipart/form-data">
+<form action='{{url_for("Math.factorization_view")}}' method="post">
   <div class="form-group">
     <label for="InputFormula">式を入力してください</label>
     <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="formula">
   </div><br>
-
   <button type="submit" class="btn btn-primary btn-block">計算</button>
-</form><br>
-
+</form><br><br>
 
 {% if init_flag==0 %}
 <div class="center">
@@ -24,7 +21,7 @@
   </h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
-  <script src="static/js/copy.js"></script>
+  <script src="static_math/js/copy.js"></script>
 </div>
 {% endif %}
 
