--- a/application/flask_math/templates_math/Apart.html
+++ b/application/flask_math/templates_math/Apart.html
@@ -14,7 +14,7 @@
 
 <div class="accordion" id="accordion_1">
   <div class="card">
-    <button class="btn btn-outline-secondary btn-block" type="button" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" aria-controls="collapse_1">式入力</button>
+    <button class="btn btn-secondary btn-block" type="button" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" aria-controls="collapse_1">式入力</button>
     {% if init_flag==1 %}
     <div id="collapse_1" class="collapse show" aria-labelledby="heading_1" data-parent="#accordion_1">
       <div id="parent"></div>
@@ -31,7 +31,7 @@
 
 {% if init_flag==0 %}
 <div class="center">
-  <h4 class="latex">\({{anser}}\)</h4><br><br>
+  <h4 class="latex">\({{anser}}\)</h4><br>
   <h5>\(\LaTeX\)</h5>
   <h5 class="latex" id="targetID">
     <pre>{{anser}}</pre>
