--- a/application/flask_raspi/templates_raspi/index_raspi.html
+++ b/application/flask_raspi/templates_raspi/index_raspi.html
@@ -9,6 +9,7 @@
   <a class="list-group-item list-group-item-action" href="{{url_for('raspi.led_view',state='blink')}}">Blink</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('raspi.led_view',state='high')}}">HIGH</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('raspi.led_view',state='low')}}">LOW</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('raspi.led_view',state='rgb')}}">RGB</a>
 </div>
 <br><br>
 
