--- a/application/flask_raspi/templates_raspi/layout_raspi.html
+++ b/application/flask_raspi/templates_raspi/layout_raspi.html
@@ -36,7 +36,7 @@
           </a>
         </li>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <li class="nav-item avtive dropdown">
+          <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
@@ -44,6 +44,7 @@
               <a class="dropdown-item" href="{{ url_for('raspi.led_view',state='blink')}}">Blink</a>
               <a class="dropdown-item" href="{{ url_for('raspi.led_view',state='high')}}">HIGH</a>
               <a class="dropdown-item" href="{{ url_for('raspi.led_view',state='low')}}">LOW</a>
+              <a class="dropdown-item" href="{{ url_for('raspi.led_view',state='rgb')}}">RGB</a>
             </div>
           </li>
         </div>
@@ -80,6 +81,7 @@
         <a style="display: block;" class="heading" href="{{ url_for('raspi.led_view',state='blink')}}"><small>Blink</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('raspi.led_view',state='high')}}"><small>HIGH</small></a>
         <a style="display: block;" class="heading" href="{{ url_for('raspi.led_view',state='low')}}"><small>LOW</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('raspi.led_view',state='rgb')}}"><small>LOW</small></a>
       </ul>
 
       <div class="center">
