--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -23,7 +23,7 @@
   <script src="../static_main/js/darkmode.js"></script>
   {% block SCRIPT %}
 
-  {% endblock%}
+  {% endblock %}
 </head>
 
 <body id="target" class="bootstrap-dark">
@@ -44,7 +44,7 @@
         </li>
         <div class="collapse navbar-collapse" id="navbarNav">
           <li class="nav-item active dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" baria-haspopup="true" aria-expanded="false">MENU</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('Math.index_view')}}">Flask math</a>
